--- a/TShuWebApp/_Layout.cshtml
+++ b/TShuWebApp/_Layout.cshtml
@@ -19,6 +19,7 @@
                     <ul class="dropdown-menu">
                         @*<li> <a href="@Href("~/ExercisePages/Exercise01.cshtml")">Exercise 01</a> </li>*@
                         <li> <a href="@Href("~/ExercisePages/Exercise02_A.cshtml")">Exercise 02</a> </li>
+                        <li> <a href="@Href("~/ExercisePages/Exercise03.cshtml")">Exercise 03</a> </li>
                     </ul>
                 </li>
             </ul>
