--- a/TShuWebApp/_Layout.cshtml
+++ b/TShuWebApp/_Layout.cshtml
@@ -17,9 +17,10 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Exercises<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        @*<li> <a href="@Href("~/ExercisePages/Exercise01.cshtml")">Exercise 01</a> </li>*@
+                        <li> <a href="@Href("~/ExercisePages/Exercise01.cshtml")">Exercise 01</a> </li>
                         <li> <a href="@Href("~/ExercisePages/Exercise02_A.cshtml")">Exercise 02</a> </li>
                         <li> <a href="@Href("~/ExercisePages/Exercise03.cshtml")">Exercise 03</a> </li>
+                        <li> <a href="@Href("~/ExercisePages/Exercise04_A.cshtml")">Exercise 04</a> </li>
                     </ul>
                 </li>
             </ul>
